# saas

./: Rancang Bangun SaaS UMKM_.md  test-login.html
Saas-Project/backend/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT-PROGRESS.md  Dockerfile  FIXME-TASK-PLAN.md  IMPLEMENTATION-GUIDE.md  MIGRATION-PLAN.sh  TESTING-APPROACH.md  TESTING-GUIDE.md  build.sh  deny.toml  docker-compose.yml  fix-errors.sh  fix-migrations.sh  run-dev.sh  run-fixed.sh  run-for-frontend-testing.sh  run-no-migrations.sh  run-server-skip-migrations.sh  run-without-auth.sh  start-server.sh  start.sh
Saas-Project/backend/.github/workflows/: cd.yml  ci-cd.yml  ci.yml
Saas-Project/backend/api-docs/: README.md  openapi.yaml
Saas-Project/backend/benches/: user_repository_benchmarks.rs
Saas-Project/backend/migrations/: 20250123000001_initial_schema.sql  20250123000002_audit_logs.sql  20250123000003_notifications_workflows.sql  20250123000004_financial_management.sql  20250201000001_add_email_verification.sql  20250201000002_create_verified_admin.sql  20250724000001_file_management.sql  20250725000001_financial_module_v2.sql  20250729000001_business_workflow_services.sql  20250730000001_consolidated_financial.sql  20250731000001_improved_performance_indexes.sql  20250731000002_file_management.sql
Saas-Project/backend/migrations/rollbacks/: 20250123000001_initial_schema_rollback.sql  20250123000002_audit_logs_rollback.sql  20250123000003_notifications_workflows_rollback.sql  20250123000004_financial_management_rollback.sql  20250723000001_add_performance_indexes_rollback.sql  20250724000001_file_management.sql  20250725000001_financial_module_v2.sql  20250728000001_financial_module_rollback.sql  20250730000001_consolidated_financial_rollback.sql  20250731000001_improved_performance_indexes_rollback.sql
Saas-Project/backend/migrations_backup_20250723221654/: 20250123000004_financial_management.sql
Saas-Project/backend/migrations_backup_20250723221839/: 20250123000003_notifications_workflows.sql
Saas-Project/backend/migrations_backup_20250723221900/: 20250123000002_audit_logs.sql  20250728000001_financial_module.sql
Saas-Project/backend/scripts/: PERFORMANCE-TESTING-GUIDE.md  clean_database.sh  manage_migrations.sh  performance-test.js  quality-check.sh  run-performance-tests.sh  run-tests.sh  run_tests.sh  setup-performance-env.sh  setup_test_db.sh
Saas-Project/backend/src/: config.rs  lib.rs  main.rs
Saas-Project/backend/src/application/: command_handlers.rs  commands.rs  mod.rs  queries.rs  query_handlers.rs  services.rs
Saas-Project/backend/src/domain/: business.rs  companies.rs  dto.rs  entities.rs  errors.rs  events.rs  (+8 more)
Saas-Project/backend/test-reports/: README.md
(+286 files in other folders)
